src/jupyterhub/ingress.yaml
# kubectl apply -f ingress.yaml
# This makes it so port 80 localhost is our jupyterhub,
# but trying to connect NOT on localhost fails.  This is
# thus much more secure.  It's using the nginx ingress
# controller.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
